# food-tensors

./: .gitignore  README.md  TODO.md  pyproject.toml
data/raw/: cube_rule_examples.csv
paper/: main.tex  references.bib
paper/sections/: conclusion.tex  cube_rule_types_figure.tex  discussion.tex  experiments.tex  introduction.tex  methods.tex  related_work.tex  software.tex  tensor_axis_figure.tex  ternary_salad_figure.tex
scripts/: build_paper.py  crop_paper_pngs.py  fill_tensor_llm.py  plot_confidence_histogram.py  plot_lettuce_croutons_gradient.py  plot_tensor.py  prefill_cube_rule.py  review_llm_outputs.py  salad_cube_rule_experiment.py  serve_figures.py  validate_ground_truth.py
src/tensor_food/: __init__.py  io_utils.py  schema.py
web/: figures.json  index.html
